# batbot

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  ISSUES.rst  MANIFEST.in  README.md  README.rst  app.py  setup.cfg
.github/workflows/: codeql-analysis.yaml  docker-publish.yaml  python-publish.yaml  testing.yaml
batbot/: __init__.py  batbot.py  batbot_cli.py  utils.py
batbot/spectrogram/: __init__.py
docs/: batbot.rst  cli.rst  conf.py  environment.rst  index.rst
requirements/: documentation.txt  optional.txt  runtime.txt
tests/: test_batbot.py  test_preprocess.py  test_preprocess_parallel.py  test_spectrogram.py
tpl/pyastar2d/: .gitignore  setup.py
tpl/pyastar2d/.github/workflows/: python-publish-macos.yml  python-publish-windows.yml
tpl/pyastar2d/examples/: example.py  maze_solver.py
tpl/pyastar2d/src/pyastar2d/: astar_wrapper.py
tpl/pyastar2d/tests/: test_astar.py
