[metadata]
name = batbot
description = Machine Learning app for the Kitware BatAI Project
version = attr: batbot.VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Kitware
author = Kitware
author_email = vision@kitware.com
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://batbot.readthedocs.io
    Source = https://github.com/Kitware

[options]
packages = find:
platforms = any
include_package_data = true
install_requires =
    click
    cryptography
    cython
    librosa
    line_profiler
    matplotlib
    numpy
    opencv-python-headless
    Pillow
    pooch
    pyastar2d @ git+https://github.com/bluemellophone/batbot-pyastar2d@master
    rich
    scikit-image
    shapely
    sphinx-click
    tqdm
python_requires = >=3.7

[options.entry_points]
console_scripts =
    batbot = batbot.batbot:cli

[tool:pytest]
minversion = 5.4
addopts = -v -p no:doctest --xdoctest --xdoctest-style=google --random-order --random-order-bucket=global --cov=./ --cov-report html -m "not separate" --durations-min=1.0 --color=yes --code-highlight=yes --show-capture=log -ra
testpaths =
    batbot
    tests
filterwarnings =
    default

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

[flake8]
exclude = .git

[tool:isort]
profile = black
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
